--- a/.github/workflows/build-cpu-executable.yaml
+++ b/.github/workflows/build-cpu-executable.yaml
@@ -51,16 +51,16 @@ jobs:
 
     - name: Create version extraction script
       run: |
-        echo 'import re
-import sys
-with open("nexa/__init__.py", "r") as f:
-    content = f.read()
-match = re.search(r"^__version__\s*=\s*[\'\"]([^\'\"]*)[\'\"]", content, re.MULTILINE)
-if match:
-    print(match.group(1))
-else:
-    print("Version not found", file=sys.stderr)
-    sys.exit(1)' > extract_version.py
+        echo "import re" > extract_version.py
+        echo "import sys" >> extract_version.py
+        echo "with open('nexa/__init__.py', 'r') as f:" >> extract_version.py
+        echo "    content = f.read()" >> extract_version.py
+        echo "match = re.search(r'^__version__\\s*=\\s*[\'\"']([^\'\"']*)[\'\"']', content, re.MULTILINE)" >> extract_version.py
+        echo "if match:" >> extract_version.py
+        echo "    print(match.group(1))" >> extract_version.py
+        echo "else:" >> extract_version.py
+        echo "    print('Version not found', file=sys.stderr)" >> extract_version.py
+        echo "    sys.exit(1)" >> extract_version.py
 
     - name: Extract version (Windows)
       if: runner.os == 'Windows'
