changed workflow "on"

--- a/.github/workflows/build-macos-cpu-dmg.yaml
+++ b/.github/workflows/build-macos-cpu-dmg.yaml
@@ -2,9 +2,10 @@ name: Build Nexa Executables
 
 on:
   push:
-    branches: [ main ]
+    branches: [ perry/macos-cpu-bundle ]
   pull_request:
-    branches: [ main ]
+    branches: [ perry/macos-cpu-bundle ]
+  workflow_dispatch:
 
 jobs:
   build-macos:
