support nexa run gguf models from huggingface

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "uvicorn",
     "pydantic",
     "pillow",
+    "huggingface_hub",
     "prompt_toolkit",
     "tqdm",                     # Shared dependencies
     "tabulate",
