change to another way to set env variable

--- a/.github/workflows/build-macos-cpu-dmg.yaml
+++ b/.github/workflows/build-macos-cpu-dmg.yaml
@@ -99,8 +99,16 @@ jobs:
       run: |
         NOTARIZATION_OUTPUT=$(xcrun notarytool submit Nexa-${{ env.VERSION }}.dmg --apple-id "$APPLE_ID" --password "$APPLE_ID_PASSWORD" --team-id "$APPLE_TEAM_ID")
         echo "$NOTARIZATION_OUTPUT"
+        
+        # Extracting SUBMISSION_ID
         SUBMISSION_ID=$(echo "$NOTARIZATION_OUTPUT" | grep -o 'id: [^,]*' | cut -d' ' -f2)
-        echo "SUBMISSION_ID=$SUBMISSION_ID" >> $GITHUB_ENV
+        
+        # Set SUBMISSION_ID as a multiline environment variable
+        {
+          echo "SUBMISSION_ID<<EOF"
+          echo "$SUBMISSION_ID"
+          echo "EOF"
+        } >> "$GITHUB_ENV"
 
     - name: Wait for notarization and check result
       env:
